Update Maven compiler version and add SonarCloud config
Updated Maven compiler release version to 25 and added SonarCloud configuration.

Signed-off-by: Pedram-Faramarz <p_faramarz@kbtu.kz>

--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,13 @@
 
   <properties>
     
+    <!-- SonarCloud configuration -->
     <sonar.organization>pedram-faramarz-1</sonar.organization>
+    <sonar.projectKey>Pedram-Faramarz_Petclinic</sonar.projectKey>
+    
     <!-- Generic properties -->
     <java.version>25</java.version>
-    <maven.compiler.release>17</maven.compiler.release>
+    <maven.compiler.release>25</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- Important for reproducible builds. Update using e.g. ./mvnw versions:set -DnewVersion=... -->
