--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
   id 'io.spring.javaformat' version '0.0.47'
   id "io.spring.nohttp" version "0.0.11"
   id 'net.ltgt.errorprone' version '4.3.0'
+  id "org.sonarqube" version "7.0.1.6134"
 }
 
 gradle.startParameter.excludedTaskNames += [ "checkFormatAot", "checkFormatAotTest" ]
@@ -18,6 +19,13 @@ version = '4.0.0-SNAPSHOT'
 java {
   toolchain {
     languageVersion = JavaLanguageVersion.of(25)
+  }
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "Pedram-Faramarz_Petclinic"
+    property "sonar.organization", "pedram-faramarz-1"
   }
 }
 
