--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,7 @@
 sonar.projectKey=Pedram-Faramarz_Petclinic
 sonar.organization=pedram-faramarz-1
+sonar.host.url=https://sonarcloud.io
 
-
-# This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=Petclinic
-sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=./
-
-# Encoding of the source code. Default is default system encoding
+sonar.sources=src
+sonar.java.binaries=target/classes
 sonar.sourceEncoding=UTF-8
