Enhance build workflow with Sonar report steps
Add steps to export and upload Sonar report

Signed-off-by: Pedram-Faramarz <p_faramarz@kbtu.kz>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,12 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io
+          
+      - name: Export Sonar Report
+        run: mvn sonar:sonar -Dsonar.analysis.mode=preview -Dsonar.report.export.path=target/sonar-report.json
+
+      - name: Upload Sonar Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: sonar-report
+          path: target/sonar-report.json
