--- a/.github/workflows/Trivy_Scan.yml
+++ b/.github/workflows/Trivy_Scan.yml
@@ -1,4 +1,5 @@
-name: build
+name: Trivy Scan
+
 on:
   push:
     branches:
@@ -6,8 +7,8 @@ on:
   pull_request:
 
 jobs:
-  build:
-    name: Build and Scan
+  build-and-scan:
+    name: Build Docker Image & Scan
     runs-on: ubuntu-24.04
 
     steps:
@@ -15,22 +16,36 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker image
-        run: docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
+        run: |
+          docker build \
+            -t docker.io/my-organization/my-app:${{ github.sha }} \
+            -f docker/Dockerfile \
+            docker/
 
-      - name: Run Trivy vulnerability scanner
+      - name: Run Trivy vulnerability scanner (JSON report)
         uses: aquasecurity/trivy-action@0.28.0
         id: trivy_scan
         with:
           image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
-          format: 'json'         # JSON is easier to store as artifact
-          output: 'trivy-report.json'
+          format: 'json'
+          output: "trivy-report-${{ github.sha }}.json"
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
 
-      - name: Upload Trivy scan report as artifact
+      - name: Upload Trivy report as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-report
-          path: trivy-report.json
+          name: trivy-report-${{ github.sha }}
+          path: "trivy-report-${{ github.sha }}.json"
+
+      - name: Trivy Scan Table Summary (logs)
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          format: 'table'
+          exit-code: '0'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
