--- a/.github/workflows/Trivy_Scan.yml
+++ b/.github/workflows/Trivy_Scan.yml
@@ -6,6 +6,9 @@ on:
       - main
   pull_request:
 
+permissions:
+  contents: read  # required to fetch action
+
 jobs:
   trivy-scan:
     runs-on: ubuntu-24.04
@@ -27,14 +30,14 @@ jobs:
 
       # Step 4: Run Trivy library scan (for Maven dependencies)
       - name: Run Trivy library scan
-        uses: aquasecurity/trivy-action@v0.28.0
+        uses: aquasecurity/trivy-action@v0.33.1
         with:
           scan-type: 'library'           # Scan Maven dependencies
           format: 'json'
           output: 'trivy-report.json'
-          exit-code: '0'
+          exit-code: '1'                 # Fail workflow on vulnerabilities
           vuln-type: 'library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL,HIGH'      # Only CRITICAL & HIGH
 
       # Step 5: Upload Trivy report artifact
       - name: Upload Trivy report
