--- a/.github/workflows/dependency.yml
+++ b/.github/workflows/dependency.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout your code
-      - name: Checkout repository
+      # 1️⃣ Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Run OWASP Dependency-Check
+      # 2️⃣ Run Dependency-Check (HTML only)
       - name: Run Dependency-Check
         uses: dependency-check/DependencyCheck_Action@main
         id: depcheck
@@ -22,16 +22,12 @@ jobs:
           project: 'MyProject'
           path: '.'
           out: 'dependency-check-reports'
-          args: >
-            -f HTML
-            -f XML
-            -f JSON
-            --failOnCVSS 7
-            --noupdate
+          format: 'HTML'                 # Only HTML report
+          args: '--failOnCVSS 7 --noupdate'
 
-      # 3️⃣ Upload the generated reports
-      - name: Upload Dependency-Check Reports
+      # 3️⃣ Upload HTML report as artifact (v4)
+      - name: Upload Dependency-Check HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: dependency-check-reports
-          path: dependency-check-reports
+          name: dependency-check-html
+          path: dependency-check-reports/dependency-check-report.html
